feat: ajout d'un champ de type date pour les formulaires personnalisés (#157)
Co-authored-by: Maxime Merrien <maxime.merrien@atos.net>

--- a/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
@@ -248,7 +248,7 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                                                         addChamp($segmentTableau, sprintf('valeur%d', $index), '');
                                                     }
                                                 }
-                                                
+
                                                 $segmentTableau->merge();
                                             } else {
                                                 foreach ($champ['FILS']['VALEURS'] as $ligne) {
@@ -260,6 +260,16 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                                                                 $col['VALEUR'] = 'Oui';
                                                             } else {
                                                                 $col['VALEUR'] = 'Non';
+                                                            }
+                                                        } else {
+                                                            // Définition du libellé pour les dates
+                                                            if ('Date' === $col['TYPE']) {
+                                                                if ($col['VALEUR'] !== null) {
+                                                                    $zendDate = new Zend_Date($col['VALEUR'], 'dd/MM/yyyy');
+                                                                    $col['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                                                } else {
+                                                                    $col['VALEUR'] = "";
+                                                                }
                                                             }
                                                         }
 
@@ -281,6 +291,16 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                                                 } else {
                                                     $champFils['VALEUR'] = 'Non';
                                                 }
+                                            } else {
+                                                // Définition du libellé pour les dates
+                                                if ('Date' === $champFils['TYPE']) {
+                                                    if ($champFils['VALEUR'] !== null) {
+                                                        $zendDate = new Zend_Date($champFils['VALEUR'], 'dd/MM/yyyy');
+                                                        $champFils['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                                    } else {
+                                                        $champFils['VALEUR'] = "";
+                                                    }
+                                                }
                                             }
                                             addChamp(
                                                 $dossInfos,
@@ -296,13 +316,23 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                                             );
                                         }
                                     }
-                                }else{
+                                } else {
                                     // Définition du libellé pour les cases à cocher
                                     if ('Case à cocher' === $champ['TYPE']) {
                                         if (true === boolval($champ['VALEUR'])) {
                                             $champ['VALEUR'] = 'Oui';
                                         } else {
                                             $champ['VALEUR'] = 'Non';
+                                        }
+                                    } else {
+                                        // Définition du libellé pour les dates
+                                        if ('Date' === $champ['TYPE']) {
+                                            if ($champ['VALEUR'] !== null) {
+                                                $zendDate = new Zend_Date($champ['VALEUR'], 'dd/MM/yyyy');
+                                                $champ['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                            } else {
+                                                $champ['VALEUR'] = "";
+                                            }
                                         }
                                     }
                                     addChamp(
@@ -317,6 +347,7 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                                         $champ['VALEUR']
                                     );
                                 }
+
                             }
                         }
                     }
