--- a/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
@@ -391,7 +391,7 @@ function retrieveInfoDossier($segment, $dossierInfos) {
                                             setVars($segmentTableau, sprintf('valeur%d', $index), '');
                                         }
                                     }
-                                    
+
                                     $segmentTableau->merge();
                                 } else {
                                     foreach ($champ['FILS']['VALEURS'] as $ligne) {
@@ -404,8 +404,17 @@ function retrieveInfoDossier($segment, $dossierInfos) {
                                                 } else {
                                                     $col['VALEUR'] = 'Non';
                                                 }
+                                            } else {
+                                                // Définition du libellé pour les dates
+                                                if ('Date' === $col['TYPE']) {
+                                                    if ($col['VALEUR'] !== null) {
+                                                        $zendDate = new Zend_Date($col['VALEUR'], 'dd/MM/yyyy');
+                                                        $col['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                                    } else {
+                                                        $col['VALEUR'] = "";
+                                                    }
+                                                }
                                             }
-
                                             setVars($segmentTableau, sprintf('valeur%d', $idxCol), $col['VALEUR'] ?? '');
                                             $idxCol++;
                                         }
@@ -424,8 +433,17 @@ function retrieveInfoDossier($segment, $dossierInfos) {
                                     } else {
                                         $champFils['VALEUR'] = 'Non';
                                     }
+                                } else {
+                                    // Définition du libellé pour les dates
+                                    if ('Date' === $champFils['TYPE']) {
+                                        if ($champFils['VALEUR'] !== null) {
+                                            $zendDate = new Zend_Date($champFils['VALEUR'], 'dd/MM/yyyy');
+                                            $champFils['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                        } else {
+                                            $champFils['VALEUR'] = "";
+                                        }
+                                    }
                                 }
-
                                 setVars(
                                     $segment,
                                     $serviceUtils->getFullFusionName(
@@ -447,6 +465,16 @@ function retrieveInfoDossier($segment, $dossierInfos) {
                                 $champ['VALEUR'] = 'Oui';
                             } else {
                                 $champ['VALEUR'] = 'Non';
+                            }
+                        } else {
+                            // Définition du libellé pour les dates
+                            if ('Date' === $champ['TYPE']) {
+                                if ($champ['VALEUR'] !== null) {
+                                    $zendDate = new Zend_Date($champ['VALEUR'], 'dd/MM/yyyy');
+                                    $champ['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                } else {
+                                    $champ['VALEUR'] = "";
+                                }
                             }
                         }
 
