--- a/application/views/scripts/dossier/creationdoc.phtml
+++ b/application/views/scripts/dossier/creationdoc.phtml
@@ -862,7 +862,7 @@ foreach ($this->formulaires as $formulaire) {
                                     addChamp($segmentTableau, sprintf('valeur%d', $index), '');
                                 }
                             }
-                            
+
                             $segmentTableau->merge();
                         } else {
                             foreach ($champ['FILS']['VALEURS'] as $ligne) {
@@ -874,6 +874,17 @@ foreach ($this->formulaires as $formulaire) {
                                             $col['VALEUR'] = 'Oui';
                                         } else {
                                             $col['VALEUR'] = 'Non';
+                                        }
+                                    }
+                                    else{
+                                        // Définition du libellé pour les dates
+                                        if ('Date' === $col['TYPE']) {
+                                            if ($col['VALEUR'] !== null) {
+                                                $zendDate = new Zend_Date($col['VALEUR'], 'dd/MM/yyyy');
+                                                $col['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                            } else {
+                                                $col['VALEUR'] = "";
+                                            }
                                         }
                                     }
 
@@ -894,6 +905,16 @@ foreach ($this->formulaires as $formulaire) {
                                 $champFils['VALEUR'] = 'Oui';
                             } else {
                                 $champFils['VALEUR'] = 'Non';
+                            }
+                        } else {
+                            // Définition du libellé pour les dates
+                            if ('Date' === $champFils['TYPE']) {
+                                if ($champFils['VALEUR'] !== null) {
+                                    $zendDate = new Zend_Date($champFils['VALEUR'], 'dd/MM/yyyy');
+                                    $champFils['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                } else {
+                                    $champFils['VALEUR'] = "";
+                                }
                             }
                         }
                         addChamp(
@@ -918,6 +939,16 @@ foreach ($this->formulaires as $formulaire) {
                     } else {
                         $champ['VALEUR'] = 'Non';
                     }
+                } else {
+                    // Définition du libellé pour les dates
+                    if ('Date' === $champ['TYPE']) {
+                        if ($champ['VALEUR'] !== null) {
+                            $zendDate = new Zend_Date($champ['VALEUR'], 'dd/MM/yyyy');
+                            $champ['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                        } else {
+                            $champ['VALEUR'] = "";
+                        }
+                    }
                 }
                 addChamp(
                     $odf,
@@ -931,6 +962,7 @@ foreach ($this->formulaires as $formulaire) {
                     $champ['VALEUR']
                 );
             }
+
         }
     }
 }
