--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -115,8 +115,18 @@
                         </div>
                     <?php endforeach ?>
                 </div>
-            <?php endif ?>
-        <?php break;
+            <?php endif;
+            break;
+        // Date
+        case 7: ?>
+            <div class="colDate" >
+                <input type='text' class='date' name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA'] : $champStr ?>' value='<?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?>'>
+                <button type="button" class='today btn'>
+                    <i class='icon-calendar' aria-hidden='true'></i>
+                    Aujourd'hui
+                </button>
+            </div>
+            <?php break;
         default:
             break;
     } ?>
