--- a/application/views/scripts/formulaire/edit-champ.phtml
+++ b/application/views/scripts/formulaire/edit-champ.phtml
@@ -160,7 +160,7 @@ endif ?>
                 </thead>
                 <tbody id='tableParentChamp' class="grp">
                     <?php foreach($this->listChamp as $champ): ?>
-                        <tr id=<?=$champ['ID_CHAMP']?>>
+                        <tr id=<?= $champ['ID_CHAMP'] ?>>
                             <td class='tdMove'><i class="icon-move"></i></td>
                             <td><?= $champ['NOM'] ?></td>
                             <td>
@@ -202,9 +202,9 @@ endif ?>
                                     <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'edit-champ', 'rubrique' => $this->rubrique['ID_RUBRIQUE'], 'champ' => $champ['ID_CHAMP']], null, true) ?>">
                                         <i title='Modifier' class='icon-pencil'></i>
                                     </a>
-                                    <a href="" data-id="<?= $champ['ID_CHAMP'] ?>" data-rubrique-id="<?= $this->rubrique['ID_RUBRIQUE'] ?>" data-id-parent="<?= $champ['ID_PARENT'] ?>" class="delete-champ">
+                                    <button data-id="<?= $champ['ID_CHAMP'] ?>" data-rubrique-id="<?= $this->rubrique['ID_RUBRIQUE'] ?>" data-id-parent="<?= $champ['ID_PARENT'] ?>" data-nom="<?= $champ['NOM'] ?>" class="btn btn-link delete-champ">
                                         <i title='Supprimer' class='icon-trash'></i>
-                                    </a>
+                                    </button>
                                 </div>
                             </td>
                         </tr>
