Renseigner le nombre de dossiers placés sur le nombre de dossiers total de l'ordre du jour dans un badge

--- a/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
+++ b/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
@@ -157,7 +157,11 @@ $(document).ready(function() {
 							idDossier : idDossier,
 						},
 						success: function( result ) {
-							verrou = result;
+							verrou = result.verrou;
+							var countListeDossierAffect = result.countAffect;
+							var countDossiers = result.count;
+            				$("#countDossierAffect").text(countListeDossierAffect + ' / ' + countDossiers);
+        
 						}
 					});
 					// retrieve the dropped element's stored Event Object
@@ -401,6 +405,10 @@ $(document).ready(function() {
 			<input type='hidden' name='heureFin' id='heureFin' value='".$this->infosDateComm['HEUREFIN_COMMISSION']."' />
 			<h3>".$this->infosDateComm['LIBELLE_DATECOMMISSION'];
 
+			$countListeDossierNonAffect = count($this->listeDossierNonAffect);
+			$countListeDossierAffect = count($this->listeDossierAffect);
+			$listeDesDossiers = count($this->listeDesDossiers);	
+			echo "<span class='badge badge-info'  id='countDossierAffect' style=' margin:10px;'> $countListeDossierAffect / $listeDesDossiers</span>";
 			echo "</h3>";
 
 	echo "	<input type='hidden' name='dateCommId' id='dateCommId' value='".$this->infosDateComm['ID_DATECOMMISSION']."' />
