--- a/application/views/scripts/formulaire/partials/partial-form-custom.phtml
+++ b/application/views/scripts/formulaire/partials/partial-form-custom.phtml
@@ -1,6 +1,6 @@
 <?php foreach ($this->rubriques as $rubrique) : ?>
     <div id='afficher_rubrique-<?= $rubrique['ID_RUBRIQUE'] ?>' class="<?= boolval($rubrique['DISPLAY']) === false ? 'hide' : '' ?>">
-        <h4 class='h4_subtitle'><?= $rubrique['NOM'] ?></h4>
+        <h4 id='<?= strtolower(preg_replace('/\s|\'+/', '-', $rubrique['NOM'])) ?>' class='h4_subtitle'><?= $rubrique['NOM'] ?></h4>
 
         <?php if (empty($rubrique['CHAMPS'])): ?>
             <?=
