--- a/application/views/scripts/formulaire/partials/partial-rubrique-display.phtml
+++ b/application/views/scripts/formulaire/partials/partial-rubrique-display.phtml
@@ -1,3 +1,3 @@
 <?php if (boolval($this->DISPLAY) === true): ?>
-    <a href='#<?= strtolower(preg_replace('/\s+/', '-', $this->NOM)) ?>'><?= $this->NOM ?></a>
+    <a href='#<?= strtolower(preg_replace('/\s|\'+/', '-', $this->NOM)) ?>'><?= $this->NOM ?></a>
 <?php endif ?>
