--- a/public/css/formulaire/descriptif.css
+++ b/public/css/formulaire/descriptif.css
@@ -1,7 +1,28 @@
-#descriptif-personnalise .descriptif-personnalise_rubriques-infos a {
+.descriptif-personnalise_rubriques-infos {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1rem;
+    row-gap: 2rem;
+}
+
+.descriptif-personnalise_rubriques-infos a {
     font-weight: 600;
     text-decoration: underline;
-    margin-left: 1rem;
+}
+
+.descriptif-personnalise_rubriques-infos--edit {
+    justify-content: space-between;
+}
+
+.descriptif-personnalise_rubrique {
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+}
+
+.descriptif-personnalise_rubrique label, 
+.descriptif-personnalise_rubrique input {
+    margin: 0;
 }
 
 #descriptif-personnalise .form-horizontal .control-label {
