--- a/application/layouts/dashboard.phtml
+++ b/application/layouts/dashboard.phtml
@@ -36,14 +36,16 @@
                   <?php echo $this->placeholder('after_content') ?>
                 </div>
             </div>
+            <button id="go-top" type="button" class="btn hide" onclick="scrollToTop()">
+                <i class="icon-arrow-up"></i>
+            </button>
             <div class='row-fluid'>
                 <div class="span12">
                     <?php echo $this->render("includes/footer.phtml"); ?>
                 </div>
             </div>
-
         </div>
-        
+
         <script>
           $(document).ready(function() {
               $(".sidebar").css('height', $(document).height() + 'px');
