--- a/application/views/scripts/dossier/prescription.phtml
+++ b/application/views/scripts/dossier/prescription.phtml
@@ -89,8 +89,21 @@ echo "
 
 						if($listePrescr[$i][0]["ID_PRESCRIPTION_TYPE"] == null){
 							echo "
-								<td rowspan='".$nbAssoc."' class='".( ( $listePrescr[$i][$j]['TYPE_PRESCRIPTION_DOSSIER'] != 0 )? "span5" :"span6" )."'>
-									".nl2br($listePrescr[$i][0]['LIBELLE_PRESCRIPTION_DOSSIER'])."
+								<td rowspan='".$nbAssoc."' class='".( ( $listePrescr[$i][$j]['TYPE_PRESCRIPTION_DOSSIER'] != 0 )? "span5" :"span6" )."'>";
+                                    if ($listePrescr[$i][$j]['DATE_LEVEE'] !== null) {
+                                        echo "<span class='label label-info'>Levée le {$listePrescr[$i][$j]['DATE_LEVEE_FULL']}</span>";
+                                    }
+                                    if ($listePrescr[$i][$j]['JUSTIFICATIF_LEVEE']) {
+                                        echo "<i
+                                            class='justification-levee icon-info-sign'
+                                            title='Justification'
+                                            data-content='".nl2br($listePrescr[$i][$j]['JUSTIFICATIF_LEVEE'])."'
+                                            data-html='true'
+                                            data-placement='top'
+                                        ></i>";
+                                    }
+
+                                    echo "<p>".nl2br($listePrescr[$i][0]['LIBELLE_PRESCRIPTION_DOSSIER'])."</p>
 								</td>
 							";
 						}else{
@@ -515,5 +528,7 @@ $(document).ready(function(){
 		});
 		return false;
 	});
+
+    $('.justification-levee').popover()
 });
 </script>
