--- a/application/views/scripts/search/results/dossier.phtml
+++ b/application/views/scripts/search/results/dossier.phtml
@@ -108,12 +108,14 @@
     </div>
 
     <div class="pull-left">
-        <?php if($this->DATE_REPONSE_ATTENDUE !== null) :
-            $tempsRestant = Service_Utils_TempsRestant::calculate($this->DATE_REPONSE_ATTENDUE);
-            $couleur = Service_Utils_TempsRestant::getCouleurTempsRestant($this->DATE_REPONSE_ATTENDUE);
+        <?php $tempsRestant = Service_Utils_TempsRestant::calculate($this->DATE_REPONSE_ATTENDUE);
 
-            echo "<span class='label label-$couleur'>Temps restant : ".$tempsRestant."</span>";
-        endif ?>
+            if (null !== $tempsRestant) {
+                $couleur = Service_Utils_TempsRestant::getCouleurTempsRestant($this->DATE_REPONSE_ATTENDUE);
+
+                echo "<span class='label label-$couleur'>Temps restant : ".$tempsRestant."</span>";
+            }
+        ?>
     </div>
 
     <div class="pull-right">
